# senpai

./: pyproject.toml
resources/config/: dao.yaml
scripts/: psf_vs_exposure.py
senpai/catalog/: gaia_local.py
senpai/cli/: burr.py  plotting.py
senpai/core/: config.py
senpai/engine/detection/: kernels.py
senpai/engine/detection/point/: fwhm.py  satellite.py  sidereal.py
senpai/engine/detection/streak/: extraction.py  rate_extraction.py  rate_rate.py  rate_sidereal.py
senpai/engine/models/: metadata.py  senpai.py  starfield.py
senpai/engine/observability/: calibration.py
senpai/engine/photometry/: utils.py
senpai/engine/plotting/: psf.py  replot.py
senpai/engine/processing/: collect.py  photometry_pipeline.py  sidereal.py
senpai/engine/tests/: test_burr_replot.py  test_point_detection.py  test_stats.py  test_streak_extraction.py  test_wcs_helpers.py
senpai/engine/utils/: fits_io.py  frame_organization.py  preprocessing.py  stats.py  wcs_helpers.py  wcs_refinement.py
senpai/export/: cli.py  coco.py
senpai/integrations/burr/: replot.py
