[project]
name = "astro-senpai"
version = "2.3.2"
description = "SENPAI is a software package for the analysis of astronomical images."
authors = [
    { name="Zach Gazak", email="jzg@alum.mit.edu" }
]
keywords = ["astronomy", "astrometry", "photometry", "astrometric fitting", "astrometric calibration"]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "arrow>=1.3.0",
    "astroeasy>=1.0.14",
    "astropy>=6.1.7",
    "astroquery>=0.4.11",
    "colorlog>=6.9.0",
    "fastapi>=0.115.12",
    "imageio>=2.37.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "opencv-python-headless>=4.11.0.86",
    "pandas>=2.3.1",
    # <3.0: photutils 3.0 renamed star-finder columns (xcentroid→x_centroid)
    # and changed flux/mag conventions; calibration was validated on 2.x.
    "photutils>=2.0.2,<3.0",
    "pydantic>=2.11.1",
    "pypng>=0.20220715.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rawpy>=0.25.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/zgazak/senpai"
Repository = "https://github.com/zgazak/senpai"
Issues = "https://github.com/zgazak/senpai/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.3.3",
    "pytest-datadir>=1.5.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.25.2",
]


[tool.uv]
override-dependencies = ["pydantic>=2.11"]

[tool.pytest.ini_options]
testpaths = ["tests", "senpai/engine/tests", "senpai/api/tests"]
addopts = "--cov-report=term-missing"
markers = [
    "requires_astrometry: needs a local Astrometry.net install and index files (skipped in CI)",
    "requires_catalog: needs local star catalog files or network catalog access (skipped in CI)",
    "slow: long-running test",
]

[tool.coverage.run]
omit = [
    "senpai/api/tests/*",
    "senpai/engine/tests/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]


# Formatting

[tool.isort]
# Play nicely with black
profile = "black"
# Specific directory includes
src_paths = ["senpai", "tests"]
# Add to skip list
extend_skip = [
    ".dat",
    ".md",
    ".json",
    ".rst",
    ".txt",
    ".yaml",
    ".yml",
    "coverage*",
    ".vscode/",
    ".mypy_cache/",
    ".pytest_cache/",
    "__pycache__/",
    ".coverage*",
    "configs/",
    "coverage/",
    "db/",
    "debugging/",
    "plots/",
    "build/",
    "dist/",
    "docs/build/",
    "docs/source/gen/",
]
# Use .gitingore to skip files
skip_gitignore = true
# git_ignore = true
# Line length rules
line_length = 120
# Enforce Unix line endings
line_ending = "\n"

# Import headers
import_heading_stdlib = "Standard Library Imports"
import_heading_thirdparty = "Third Party Imports"
import_heading_localfolder = "Local Imports"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    # "C90",
    # pycodestyle
    "E",
    "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
    "ERA001", # Commented out code - lots of false positives
    "TRY003", # Avoid specifying long messages outside exception class
    "S311",   # random isn't strong enough for crptography, but we are just doing stochastic testing here
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.extend-per-file-ignores]

"{tests,senpai/engine/tests,senpai/api/tests}/**/*.py" = [
    # at least this three should be fine in tests:
    "S101", # asserts allowed in tests...
    "S105",
    "S106",
    "S107",
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["senpai"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.0",
    "genbadge[coverage,tests]>=1.1.3",
]
